add .to list() instead of collection.tolist()